--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -1,5 +1,12 @@
 server:
   port: 9000
+  
+spring:
+  rabbitmq:
+    host: 192.168.179.6
+    port: 5672
+    username: guest
+    password: guest
 
 eureka:
   client:
